[project]
name = "langgraph_agents"
version = "0.1.0"
description = "A project using LangGraph and LangChain for document processing"
requires-python = ">=3.9"
dependencies = [
    "aiohappyeyeballs",
    "aiohttp",
    "aiosignal",
    "altair",
    "annotated-types",
    "anyio",
    "attrs",
    "blinker",
    "cachetools",
    "certifi",
    "charset-normalizer",
    "click",
    "colorama",
    "dataclasses-json",
    "deprecation",
    "distro",
    "frozenlist",
    "gitdb",
    "GitPython",
    "gotrue",
    "greenlet",
    "h11",
    "h2",
    "hpack",
    "httpcore",
    "httpx",
    "httpx-sse",
    "hyperframe",
    "idna",
    "Jinja2",
    "jiter",
    "jsonpatch",
    "jsonpointer",
    "jsonschema",
    "jsonschema-specifications",
    "langchain",
    "langchain-community",
    "langchain-core",
    "langchain-openai",
    "langchain-text-splitters",
    "langsmith",
    "markdown-it-py",
    "MarkupSafe",
    "marshmallow",
    "mdurl",
    "multidict",
    "mypy-extensions",
    "narwhals",
    "numpy",
    "openai",
    "orjson",
    "packaging",
    "pandas",
    "pillow",
    "postgrest",
    "propcache",
    "protobuf",
    "pyarrow",
    "pydantic",
    "pydantic-settings",
    "pydantic_core",
    "pydeck",
    "Pygments",
    "pypdf",
    "python-dateutil",
    "python-dotenv",
    "pytz",
    "PyYAML",
    "realtime",
    "referencing",
    "regex",
    "requests",
    "requests-toolbelt",
    "rich",
    "rpds-py",
    "six",
    "smmap",
    "sniffio",
    "SQLAlchemy",
    "storage3",
    "streamlit",
    "StrEnum",
    "supabase",
    "supafunc",
    "tenacity",
    "tiktoken",
    "toml",
    "tornado",
    "tqdm",
    "typing-inspect",
    "typing_extensions",
    "tzdata",
    "urllib3",
    "watchdog",
    "websockets",
    "yarl",
    "zstandard"
]
